--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-blaze-slider": "^1.7.2",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "sharp": "^0.32.1",
