--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
+    "react-string-replace": "^1.1.1",
     "sharp": "^0.32.1",
     "typescript": "^5.1.3"
   },
