--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "blaze-slider": "^1.9.3",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
-    "next": "^13.4.19",
+    "next": "^13.4.20-canary.9",
     "next-images": "^1.8.5",
     "next-sitemap": "^4.2.2",
     "plaiceholder": "^3.0.0",
